# quick_file_searcher

./: .gitignore  Cargo.toml  README.md  install.sh
src/: main.rs
src/lib/: bitmap.rs  mod.rs  processor.rs  searcher.rs
src/searcher/: mod.rs  processor.rs
